cluster/manifests/talk/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: talk
  labels:
    name: talk
    pod-security.kubernetes.io/enforce: restricted
