cluster/manifests/talk/overlays/dev/peer_authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: talk
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: talk
      app.kubernetes.io/component: ""
  mtls:
    mode: STRICT
