cluster/manifests/talk/overlays/dev/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: talk
spec:
  selector:
    istio: ingressgateway
  servers:
    - hosts:
        - talk.minikube.127.0.0.1.nip.io
        - talk.kaidotio.dev
      port:
        number: 80
        name: http
        protocol: HTTP
