cluster/manifests/talk/overlays/dev/virtual_service.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: talk
spec:
  gateways:
    - talk
  hosts:
    - talk.minikube.127.0.0.1.nip.io
    - talk.kaidotio.dev
  http:
    - route:
        - destination:
            host: talk
            port:
              number: 8080
      retries:
        attempts: 3
        retryOn: gateway-error,retriable-4xx,connect-failure,refused-stream,unavailable,cancelled,retriable-status-codes
