cluster/manifests/talk/overlays/dev/network_policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
spec:
  podSelector: {}
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-envoy-stats-scrape
spec:
  podSelector: {}
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/name: prometheus
              app.kubernetes.io/component: ""
      ports:
        - protocol: TCP
          port: 15020
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-traffic-agent
spec:
  podSelector:
    matchLabels:
      telepresence.io/workloadEnabled: "true"
  ingress:
    - from:
        - namespaceSelector: {}
      ports:
        - protocol: TCP
          port: 9900
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: talk
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: talk
      app.kubernetes.io/component: ""
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              name: istio-gateways
          podSelector:
            matchLabels:
              istio: ingressgateway
      ports:
        - protocol: TCP
          port: 8080
